--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0px 10px;
+  margin-top: -1.5rem;
   background-color: #f8f9fa;
   border-bottom: 1px solid #ddd;
   position: sticky;
