--- a/src/components/call/WebRTCVideoCall.css
+++ b/src/components/call/WebRTCVideoCall.css
@@ -9,7 +9,7 @@
 
 /* Add upward shift when maximized */
 .c1-video-container {
-    transform: translateY(-3rem); /* Move the container upwards */
+    transform: translateY(-2rem); /* Move the container upwards */
 }
 
 /* When screen size is greater than 400px */
@@ -18,7 +18,7 @@
         padding: 1rem;
     }
     .c1-video-container {
-        transform: translateY(-5rem);
+        transform: translateY(-1rem);
     }
 }
 
@@ -28,7 +28,7 @@
         padding: 3rem;
     }
     .c1-video-container {
-        transform: translateY(-8rem);
+        transform: translateY(-2rem);
     }
 }
 
@@ -41,6 +41,7 @@
     justify-content: center;
     gap: 10px; /* Space between video containers */
     height: 100vh; /* Full viewport height */
+
     width: 100%;
     box-sizing: border-box;
     margin: 0 auto;
@@ -57,8 +58,9 @@
 
 /* Video wrapper for each video element */
 .c1-video-wrapper {
-    width: 100%;
-    max-width: 450px; /* Limit maximum width */
+    width: 10%;
+    max-width: 300px; /* Limit maximum width */
+    max-width: 400px; /* Maximum width for mobile */
     height: 45vh; /* Each video container gets less than 50% of viewport height */
     background-color: black; /* Provide a background for better clarity */
     border-radius: 8px;
@@ -76,6 +78,7 @@
 
 /* Video container style for local video */
 .c1-local-video, .c1-remote-video {
+    max-height: 250px;
     width: 100%;
     height: 100%;
     object-fit: contain; /* Keep video streams within container boundaries */
